ユーザー管理機能ビュー

--- a/app/views/medical_users/registrations/new.html.erb
+++ b/app/views/medical_users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>医療関係者</h2>
 <%= form_with model: @medical_user, url: medical_user_registration_path, class: 'new_user', local: true do |f| %>
   <%= render "medical_users/shared/error_messages", resource: resource %>
 
