--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>利用者</h2>
 
 <%= form_with model: @user, url: user_registration_path, class: 'new_user', local: true do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
