ユーザー管理scss編集

--- a/app/views/vaccination_logs/_vaccination_log.html.erb
+++ b/app/views/vaccination_logs/_vaccination_log.html.erb
@@ -1,7 +1,8 @@
-<div><%= link_to "マイナンバー:#{vaccination_log.my_number} ", vaccination_log_path(vaccination_log.id), method: :get %>
-     <%= link_to "メーカー:#{vaccination_log.manufacturer}" , vaccination_log_path(vaccination_log.id), method: :get %>
-     <%= link_to "ロット番号:#{vaccination_log.lot_number}" , vaccination_log_path(vaccination_log.id), method: :get %>
-     <%= link_to "接種日:#{vaccination_log.vaccination_date}" , vaccination_log_path(vaccination_log.id), method: :get %>
-     <%= link_to "接種回数:#{vaccination_log.vaccination_times}" , vaccination_log_path(vaccination_log.id), method: :get %>
-     by <%= vaccination_log.medical_user.name %>
+<div>
+    <%= link_to vaccination_log.vaccination_date , vaccination_log_path(vaccination_log.id), method: :get %>
+    <%= "マイナンバー:#{vaccination_log.my_number} "%>
+    <%= "メーカー:#{vaccination_log.manufacturer}" %>
+    <%= "ロット番号:#{vaccination_log.lot_number}" %>
+    <%= "接種回数:#{vaccination_log.vaccination_times}" %>
+    by <%= vaccination_log.medical_user.name %>
 </div>
