--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,39 +1,44 @@
-<h2>利用者</h2>
+<div class="box1">
+  <div class="box-inner">
+    <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+    <%= render "users/shared/error_messages", resource: resource %>
+    <h1>新規登録</h1>
+    <div class="box-name">
+      <%= f.label :name, "名前" %><br />
+      <%= f.text_field :name, autofocus: true %>
+    </div>
 
-<%= form_with model: @user, url: user_registration_path, class: 'new_user', local: true do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :名前 %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :マイナンバー %><br />
+    <div class="box-my_number">
+    <%= f.label :my_number, "マイナンバー" %><br />
     <%= f.text_field :my_number, autofocus: true, autocomplete: "my_number" %>
-  </div>
+    </div>
+  
+    <div class="box-email">
+      <%= f.label :email, "Eメール" %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="box-password">
+      <%= f.label :password, "パスワード" %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="box-password">
+      <%= f.label :password_confirmation, "パスワード(確認)" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="box-login">
+      <%= f.submit "新規登録" %>
+    </div>
+    <% end %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+    <div class="box-newusr">
+      <p><span>------------</span> 既に登録されていますか？ <span>------------</span></p>
+      <%= link_to "ログイン", new_user_session_path %>
+    </div>
   </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
