--- a/app/views/vaccination_logs/index_log.html.erb
+++ b/app/views/vaccination_logs/index_log.html.erb
@@ -1,6 +1,13 @@
-<%= link_to '戻る', root_path %>
-<%= form_with(url: search_vaccination_logs_path, local: true, method: :get, class: "search-form") do |form| %>
-  <%= form.text_field :keyword, placeholder: "検索", class: "search-input" %>
-  <%= form.submit "検索", class: "search-btn" %>
-<% end %>
+<div class="container">
+  <div class="row justify-content-md-center pt-5">
+    <div class="col-md-auto">
+      <div>
+        <%= form_with(url: search_vaccination_logs_path, local: true, method: :get, class: "search-form") do |form| %>
+        <%= form.text_field :keyword, placeholder: "検索", class: "search-input" %>
+        <%= form.submit "検索", class: "search-btn" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 <%= render partial: 'vaccination_log', collection: @vaccination_logs %>
