--- a/app/views/vaccination_logs/_form.html.erb
+++ b/app/views/vaccination_logs/_form.html.erb
@@ -1,30 +1,40 @@
 <%= form_with model: @vaccination_log, local: true do |f|%>
-  <div class="field">
-    <%= f.label :my_number, "マイナンバー" %><br />
-    <%= f.text_field :my_number, id:"prototype_title" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :manufacturer, "メーカー" %><br />
-    <%= f.text_field :manufacturer, class: :form__text, id:"prototype_catch_copy" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :lot_number, "製造番号" %><br />
-    <%= f.text_field :lot_number, class: :form__text, id:"prototype_concept" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :vaccination_date, "接種日" %><br />
-    <%= f.text_field :vaccination_date, id:"prototype_image" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :vaccination_times, "回数" %><br />
-    <%= f.text_field :vaccination_times, id:"prototype_image" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "実績登録", class: :form__btn  %>
+<div class="container">
+    <div class="row justify-content-md-center pt-5">
+      <div class="col-md-auto">
+        <div class="field ">
+          <%= f.label :my_number, "マイナンバー" %><br />
+          <%= f.text_field :my_number, id:"prototype_title" %>
+      </div>
+      <div class="col-md-auto">
+        <div class="field">
+          <%= f.label :manufacturer, "メーカー" %><br />
+          <%= f.text_field :manufacturer, class: :form__text, id:"prototype_catch_copy" %>
+        </div>
+      </div>
+      <div class="col-md-auto">
+        <div class="field">
+          <%= f.label :lot_number, "製造番号" %><br />
+          <%= f.text_field :lot_number, class: :form__text, id:"prototype_concept" %>
+        </div>
+      </div>
+      <div class="col-md-auto">
+        <div class="field">
+          <%= f.label :vaccination_date, "接種日" %><br />
+          <%= f.text_field :vaccination_date, id:"prototype_image" %>
+        </div>
+      </div>
+      <div class="col-md-auto">
+        <div class="field">
+          <%= f.label :vaccination_times, "回数" %><br />
+          <%= f.text_field :vaccination_times, id:"prototype_image" %>
+        </div>
+      </div>
+      <div class="col-md-auto">
+        <div class="actions">
+          <%= f.submit "実績登録", class: :form__btn  %>
+        </div>
+      </div>
+    </div>
   </div>
 <% end %>
