--- a/app/views/vaccination_logs/passport.html.erb
+++ b/app/views/vaccination_logs/passport.html.erb
@@ -1,12 +1,28 @@
-<div class="contents row">
-    <% @vaccination_logs.each do |vaccination_log| %>
-      <% if vaccination_log.my_number == current_user.my_number %>
-        <div>回数:<%= vaccination_log.vaccination_times %>回目</div>
-        <div>マイナンバー:<%= vaccination_log.my_number %></div>
-        <div>メーカー:<%= vaccination_log.manufacturer %></div>
-        <div>製造番号:<%= vaccination_log.lot_number %></div>
-        <div>接種日:<%= vaccination_log.vaccination_date %></div>
-      <% end %>
-    <% end %>
-  </div>
-  <%= link_to '戻る', root_path %>
+<% @vaccination_logs.each do |vaccination_log| %>
+  <% if vaccination_log.my_number == current_user.my_number %>
+    <div class="container">
+      <div class="row justify-content-md-center pt-5">
+        <div class="col-md-auto">
+          <div>回数</div>
+          <div ><%= vaccination_log.vaccination_times %></div>
+        </div>
+        <div class="col-md-auto">
+          <div>マイナンバー</div>
+          <div><%= vaccination_log.my_number %></div>
+        </div>
+        <div class="col-md-auto">
+          <div>メーカー</div>
+          <div><%= vaccination_log.manufacturer %></div>
+        </div>
+        <div class="col-md-auto">
+          <div>製造番号</div>
+          <div><%= vaccination_log.lot_number %></div>
+        </div>
+        <div class="col-md-auto">
+          <div>接種日</div>
+          <div><%= vaccination_log.vaccination_date %></div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+<% end %>
