--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light border border-5 rounded">
+<header　class="background">
+  <nav class="navbar navbar-expand-lg navbar-light bgheader p-3">
         <a class="navbar-brand" href="/">ワクチンポータル</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto align-items-center">
